# minarg

./: .gitignore  CMakeLists.txt  README.md
include/minarg/: minarg.hpp
test/: CMakeLists.txt  error.cpp  help.cpp  parse.cpp  value.cpp
